Fix the bug and remove extra space in the menu. Better sign up button size

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -84,7 +84,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    /* height: 90vh; */
     position: absolute;
     top: 80px;
     left: -100%;
@@ -140,7 +140,7 @@
     text-align: center;
     margin: 2rem auto;
     border-radius: 4px;
-    width: 80%;
+    width: 130px;
     text-decoration: none;
     font-size: 1.5rem;
     background-color: transparent;
